--- a/llvm/utils/gn/secondary/llvm/lib/Analysis/BUILD.gn
+++ b/llvm/utils/gn/secondary/llvm/lib/Analysis/BUILD.gn
@@ -85,6 +85,7 @@ static_library("Analysis") {
     "MemoryDependenceAnalysis.cpp",
     "MemoryLocation.cpp",
     "MemoryProfileInfo.cpp",
+    "MemprofTypeAnalysis.cpp",
     "MemorySSA.cpp",
     "MemorySSAUpdater.cpp",
     "ModelUnderTrainingRunner.cpp",
